<resources>
    <string name="app_name">Tbits Doc Verifier</string>
    <string name="action_settings">Settings</string>
    <string name="preview_description">Pdf Viewer</string>
    <string name="btn_take_picture">Take Picture</string>
    <string name="start_screen_record">Start</string>
    <string name="stop_screen_record">Stop</string>
    <string name="btn_record_video">Record Video</string>
    <string name="enter_mobile_number_text">Enter the 4 digit code sent to you at the mobile number</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="submit">Submit</string>
    <string name="complete_session">Complete Session</string>
    <string name="reload">Reload</string>


</resources>
